--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.14.1",
     "google-spreadsheet": "^4.1.4",
+    "moment-timezone": "^0.5.45",
     "openai": "^4.63.0",
     "pdf-parse": "^1.1.1",
     "winston": "^3.14.2"
