--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.45",
     "openai": "^4.63.0",
     "pdf-parse": "^1.1.1",
+    "sharp": "^0.33.5",
     "winston": "^3.14.2"
   },
   "devDependencies": {
