--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-plugin-builderbot": "latest",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "patch-package": "^8.0.0"
   },
   "author": "",
   "license": "ISC"
