--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,32 @@
+# Ignorar la carpeta dist
 dist/*
-node_modules
+
+# Ignorar node_modules
+node_modules/
+
+# Ignorar archivos de configuración sensibles
 .env
 
+# Ignorar sesiones y tokens
 *_sessions
 *tokens
 .wwebjs*
+
+# Ignorar archivos de logs y temporales
+*.log
+*qr.png
+tmp/
+logs/
+
+# Ignorar Git y archivos de control de versiones
+.git/
+.gitignore
+
+# Ignorar otros archivos innecesarios
+.baileys_store
+.cache
+.DS_Store
+
+# Ignorar archivos de documentación y otros
+*.gdoc
+*.pdf
